fixed stretch emoji

--- a/styles/sass/_main-styles.scss
+++ b/styles/sass/_main-styles.scss
@@ -169,6 +169,7 @@ input:checked + .slider:before {
 
 .emoji-image {
   width: 40px;
+  height: 40px;
   margin: 5px 13px;
 
   &:hover,
