--- a/styles/styles.css
+++ b/styles/styles.css
@@ -455,6 +455,7 @@ input:checked + .slider:before {
 
 .emoji-image {
   width: 40px;
+  height: 40px;
   margin: 5px 13px;
 }
 
